--- a/simple.html
+++ b/simple.html
@@ -2,8 +2,6 @@
 
 <!--
  copyright 2020 git.Training
- some silly changes from master branch
- 
 -->
 
 <head>
@@ -21,8 +19,8 @@
 	<main class="container">
 	<!-- Junk Content Goes Here -->
 		<p>
-		Not sure if we should replace this
-			Some interesting stuff goes here
+		
+		nothing but trouble
 		</p>
 	</main>
 	<footer class="container">
