--- a/simple.html
+++ b/simple.html
@@ -2,7 +2,8 @@
 
 <!--
  copyright 2020 git.Training
- Adding changes before rebasing conflicts
+ some silly changes from master branch
+ 
 -->
 
 <head>
@@ -18,8 +19,9 @@
 </head>
 <body>
 	<main class="container">
-	<!-- Content Goes Here -->
+	<!-- Junk Content Goes Here -->
 		<p>
+		Not sure if we should replace this
 			Some interesting stuff goes here
 		</p>
 	</main>
