adding changes after rebasing conflict

--- a/simple.html
+++ b/simple.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 
 <!--
- copyright 2020 git.Training
+ copyright 2020 git.
 -->
 
 <head>
-		<title>A very respectful Website</title>
+		<title>A very respectful but problematic Website </title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
