done with simple.html

--- a/simple.html
+++ b/simple.html
@@ -5,7 +5,7 @@
 -->
 
 <head>
-		<title>A very respectful but problematic Website </title>
+		<title>Updating title for Stash example </title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -18,8 +18,9 @@
 <body>
 	<main class="container">
 	<!-- Junk Content Goes Here -->
+	
 		<p>
-		
+			Adding more important content here
 		nothing but trouble
 		</p>
 	</main>
